[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/debug_overlay.gd" id="1_debug"]

[node name="DebugOverlay" type="CanvasLayer"]
script = ExtResource("1_debug")

[node name="Panel" type="PanelContainer" parent="."]
anchor_left = 0.7
anchor_top = 0.02
anchor_right = 0.99
anchor_bottom = 0.2
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 1

[node name="RunIdLabel" type="Label" parent="Panel/VBox"]
text = "Run ID:"

[node name="ExplosiveLabel" type="Label" parent="Panel/VBox"]
text = "Explosive:"

[node name="RoomLabel" type="Label" parent="Panel/VBox"]
text = "Room:"

[node name="ScrapLabel" type="Label" parent="Panel/VBox"]
text = "Scrap:"

[node name="StateLabel" type="Label" parent="Panel/VBox"]
text = "State:"

[node name="FpsLabel" type="Label" parent="Panel/VBox"]
text = "FPS:"
